# kaiseki

./: .gitignore  Cargo.toml  README.md  ipadic-download.sh  ipadic-install.sh  pre-build.sh
.github/workflows/: ci.yml
crates/kaiseki/: Cargo.toml
crates/kaiseki/src/: consts.rs  error.rs  fst.rs  inflection.rs  lattice.rs  lib.rs  morpheme.rs  tokenizer.rs  word.rs
crates/mecab-processor/: Cargo.toml
crates/mecab-processor/src/: cli.rs  main.rs  profile.rs  utils.rs
crates/mecab-types/: Cargo.toml
crates/mecab-types/src/: bincode.rs  char.rs  conjugation.rs  cost.rs  dict.rs  features.rs  lib.rs  pos.rs  row.rs  term.rs  unk.rs  utils.rs
src/: bincode.rs  build.rs  char.rs  conjugation.rs  dict.rs  error.rs  feature.rs  fst.rs  inflection.rs  lattice.rs  lib.rs  main.rs  matrix.rs  morpheme.rs  pos.rs  row.rs  term.rs  tokenizer.rs  unk.rs  utils.rs  verb.rs  word.rs
