[package]
name = "mecab-processor"
version = "0.1.0"
edition = "2021"
description = "mecab-ipadic processor and binaries generator for kaiseki"
license = "MIT"
repository = "https//github.com/luckasRanarison/kaiseki"
authors = ["LIOKA Ranarison Fiderana <luckasranarison@gmail.com>"]

[dependencies]
clap.workspace = true
mecab-types.workspace = true
bincode.workspace = true
fst.workspace = true

encoding_rs = "0.8.33"
