[package]
name = "mecab-types"
version = "0.1.0"
edition = "2021"
description = "mecab-ipadic data structures and heplers"
license = "MIT"
repository = "https//github.com/luckasRanarison/kaiseki"
authors = ["LIOKA Ranarison Fiderana <luckasranarison@gmail.com>"]

[dependencies]
bincode = { workspace = true, features = ["serde"] }
strum = { version = "0.26.3", features = ["derive"] }
